--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,33 +1,83 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.SearchActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#F2F2F2"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".View.SearchActivity"
+    android:layout_height="match_parent">
+
+    <EditText
+        android:id="@+id/txt_buscar"
+        android:layout_width="261dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="70dp"
+        android:contentDescription="Buscar"
+        android:ems="10"
+        android:hint="Buscar"
+        android:inputType="textPersonName"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/txtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="150dp"
+        android:text="Buscar por:"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <RadioGroup
+        android:id="@+id/rdGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtView"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical">
+
+        <RadioButton
+            android:id="@+id/nombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="Nombre"
+            android:textSize="18sp" />
+
+        <RadioButton
+            android:id="@+id/tipo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="Tipo de comida"
+            android:textSize="18sp" />
+
+        <RadioButton
+            android:id="@+id/ingrediente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:onClick="onRadioButtonClicked"
+            android:padding="10dp"
+            android:text="Ingrediente"
+            android:textSize="18sp" />
+    </RadioGroup>
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnBuscar"
+        android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_centerInParent="true"
-        android:text="Button"
-        tools:ignore="MissingConstraints" />
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_alignStart="@+id/txtView"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="43dp"
+        android:layout_marginBottom="259dp"
+        android:background="@drawable/button_style"
+        android:text="Buscar"
+        android:textColor="@color/ColorWhite"
+        android:textSize="18sp" />
+</RelativeLayout>
