busqueda por nombre tipo e ingrediente

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -72,9 +72,13 @@
         android:id="@+id/btnBuscar"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rdGroup"
         android:layout_alignStart="@+id/txtView"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="43dp"
+        android:layout_marginTop="79dp"
+        android:layout_marginEnd="153dp"
         android:layout_marginBottom="259dp"
         android:background="@drawable/button_style"
         android:text="Buscar"
