--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_style_new_account"
-
+        android:onClick="callRegistro"
         android:paddingLeft="13dp"
         android:paddingRight="13dp"
         android:text="Crear nueva cuenta"
@@ -138,7 +138,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="No lo quites>:/"
+        android:text="Perdon:("
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_userlogo"
         app:layout_constraintStart_toStartOf="parent"
