--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,13 +131,13 @@
 
     <Button
         android:id="@+id/buttonPba"
-        android:layout_width="wrap_content"
-        android:onClick="callMenu"
-        android:layout_height="35dp"
+        android:layout_width="146dp"
+        android:layout_height="63dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="callMenu"
         android:text="No lo quites>:/"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_userlogo"
