--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -16,24 +16,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageSwitcher
-                android:id="@+id/imageSwitcher"
-                android:layout_width="411dp"
-                android:layout_height="300dp"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager1"
+                android:layout_width="match_parent"
+                android:layout_height="261dp">
+            </android.support.v4.view.ViewPager>
 
-            <Button
-                android:id="@+id/btnNext"
-                android:layout_width="115dp"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/imageSwitcher"
-                android:layout_gravity="center"
-                android:background="@drawable/button_style"
-                android:text="Next"
-                android:textColor="@color/ColorWhite"
-                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tvNombre"
@@ -47,7 +35,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btnNext" />
+                app:layout_constraintTop_toTopOf="@+id/viewPager1" />
 
             <TextView
                 android:id="@+id/tvTipo"
@@ -89,7 +77,7 @@
                     <TextView
                         android:id="@+id/tvListaIngredientes"
                         android:layout_width="395dp"
-                        android:layout_height="182dp"
+                        android:layout_height="127dp"
                         android:layout_marginTop="5dp"
                         android:text="Lista Ingredientes:"
                         android:textColor="@color/cardview_dark_background"
