--- a/app/src/main/res/layout/activity_addrecipe.xml
+++ b/app/src/main/res/layout/activity_addrecipe.xml
@@ -7,23 +7,23 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="100dp"
-        android:layout_height="28dp"
+        android:layout_width="151dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:text="Nombre:"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.052"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/text_pasos"
-        android:layout_width="258dp"
-        android:layout_height="103dp"
+        android:layout_width="331dp"
+        android:layout_height="101dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
@@ -32,15 +32,15 @@
         android:inputType=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/text_ing"
-        android:layout_width="258dp"
-        android:layout_height="103dp"
+        android:layout_width="316dp"
+        android:layout_height="88dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
@@ -53,8 +53,8 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="78dp"
-        android:layout_height="28dp"
+        android:layout_width="142dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -68,10 +68,9 @@
 
     <EditText
         android:id="@+id/txt_type"
-        android:layout_width="221dp"
-        android:layout_height="44dp"
+        android:layout_width="249dp"
+        android:layout_height="53dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:contentDescription="Nombre"
         android:ems="10"
@@ -79,16 +78,15 @@
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.039"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/txt_name"
-        android:layout_width="221dp"
-        android:layout_height="44dp"
+        android:layout_width="262dp"
+        android:layout_height="58dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:contentDescription="Nombre"
         android:ems="10"
@@ -96,14 +94,14 @@
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="104dp"
-        android:layout_height="38dp"
+        android:layout_width="135dp"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
@@ -117,8 +115,8 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="153dp"
-        android:layout_height="35dp"
+        android:layout_width="211dp"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -132,15 +130,32 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="232dp"
+        android:layout_width="161dp"
+        android:layout_height="44dp"
+        android:background="@drawable/button_style"
         android:text="Cargar Imagen"
-        app:layout_constraintBottom_toTopOf="@+id/text_ing"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/ColorWhite"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.936"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <Button
+        android:id="@+id/btn_agregar"
+        android:layout_width="161dp"
+        android:layout_height="44dp"
+        android:background="@drawable/button_style"
+        android:text="Agregar"
+        android:textColor="@color/ColorWhite"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.934" />
+
 </android.support.constraint.ConstraintLayout>
