--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -70,16 +70,16 @@
 
     <Button
         android:id="@+id/btnBuscar"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/rdGroup"
         android:layout_alignStart="@+id/txtView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="79dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="58dp"
         android:layout_marginEnd="153dp"
-        android:layout_marginBottom="259dp"
+        android:layout_marginBottom="249dp"
         android:background="@drawable/button_style"
         android:text="Buscar"
         android:textColor="@color/ColorWhite"
