--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -73,10 +73,10 @@
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_below="@+id/rdGroup"
-        android:layout_alignStart="@+id/txtView"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="108dp"
         android:layout_marginTop="58dp"
         android:layout_marginEnd="153dp"
         android:layout_marginBottom="249dp"
